@@ -1,4 +1,6 @@
 0.31
+ - Change check_strings() error parameter with possible parameters to form
+   with quotes.
 
 0.30 2025-07-04T11:48:54+02:00
  - In case of scalar reference in check_array() present 'SCALAR' value in
